--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -71,8 +71,10 @@
     <Compile Include="Rest\Api\Bits\BitsUser.cs" />
     <Compile Include="Rest\Api\HelixException.cs" />
     <Compile Include="Rest\Api\HelixInfo.cs" />
-    <Compile Include="Rest\Api\Streams\SetStreamsTagsParameters.cs" />
-    <Compile Include="Rest\Api\Streams\StreamsTagsParameters.cs" />
+    <Compile Include="Rest\Api\Streams\Streams.cs" />
+    <Compile Include="Rest\Api\Streams\StreamsMarkers.cs" />
+    <Compile Include="Rest\Api\Streams\StreamsMetadata.cs" />
+    <Compile Include="Rest\Api\Streams\StreamsTags.cs" />
     <Compile Include="Rest\Api\Subscriptions\BroadcasterSubscribersParameters.cs" />
     <Compile Include="Rest\Api\Subscriptions\SubscriptionRelationshipParameters.cs" />
     <Compile Include="Rest\Api\Subscriptions\Subscription.cs" />
@@ -127,8 +129,6 @@
     <Compile Include="Clients\Irc\Twitch\RoomStateType.cs" />
     <Compile Include="Clients\Irc\Twitch\BadgeType.cs" />
     <Compile Include="BroadcasterLanguage.cs" />
-    <Compile Include="Rest\Api\Streams\StreamLanguage.cs" />
-    <Compile Include="Rest\Api\Streams\StreamType.cs" />
     <Compile Include="Rest\Api\Users\BroadcasterType.cs" />
     <Compile Include="Rest\Api\Videos\VideoType.cs" />
     <Compile Include="Rest\Api\Videos\VideoSort.cs" />
@@ -213,12 +213,6 @@
     <Compile Include="Rest\Api\Data.cs" />
     <Compile Include="Rest\Api\Games\TopGamesParameters.cs" />
     <Compile Include="Rest\StatusCodeSetting.cs" />
-    <Compile Include="Rest\Api\Streams\HearthstoneMetadata.cs" />
-    <Compile Include="Rest\Api\Streams\HearthstoneHero.cs" />
-    <Compile Include="Rest\Api\Streams\Player.cs" />
-    <Compile Include="Rest\Api\Streams\OverwatchHero.cs" />
-    <Compile Include="Rest\Api\Streams\OverwatchMetadata.cs" />
-    <Compile Include="Rest\Api\Streams\StreamMetadata.cs" />
     <Compile Include="Rest\Api\Games\Game.cs" />
     <Compile Include="Rest\Api\Users\FollowsDataPage.cs" />
     <Compile Include="Rest\Api\Users\FollowsData.cs" />
@@ -226,13 +220,11 @@
     <Compile Include="Rest\Api\Entitlements\EntitlementsUploadParameters.cs" />
     <Compile Include="Rest\Api\Games\GamesParameters.cs" />
     <Compile Include="Rest\Api\PagingParameters.cs" />
-    <Compile Include="Rest\Api\Streams\StreamsParameters.cs" />
     <Compile Include="Rest\Api\Users\FollowsParameters.cs" />
     <Compile Include="Rest\Api\IHelixResponse.cs" />
     <Compile Include="Rest\Api\Pagination.cs" />
     <Compile Include="Rest\Api\HelixError.cs" />
     <Compile Include="Rest\Api\HelixResponse.cs" />
-    <Compile Include="Rest\Api\Streams\Stream.cs" />
     <Compile Include="Rest\Api\Users\Follow.cs" />
     <Compile Include="Rest\Api\Users\User.cs" />
     <Compile Include="Rest\RateLimit.cs" />
