--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -58,28 +58,20 @@
     <Compile Include="Helpers\Json\ISerializer.cs" />
     <Compile Include="Helpers\Json\IDeserializer.cs" />
     <Compile Include="Helpers\Json\JsonSerializer.cs" />
-    <Compile Include="Rest\Api\Analytics\DateRange.cs" />
-    <Compile Include="Rest\Api\Bits\BitsLeaderboardData.cs" />
-    <Compile Include="Rest\Api\Bits\BitsLeaderboardPeriod.cs" />
-    <Compile Include="Rest\Api\Bits\BitsLeaderboardParameters.cs" />
-    <Compile Include="Rest\Api\DateRange.cs" />
-    <Compile Include="Rest\Api\Analytics\GameAnalyticsParameters.cs" />
-    <Compile Include="Rest\Api\Analytics\GameAnalytics.cs" />
-    <Compile Include="Rest\Api\Analytics\ExtensionAnalyticsParameters.cs" />
-    <Compile Include="Rest\Api\Analytics\ExtensionAnalytics.cs" />
-    <Compile Include="Rest\Api\Analytics\AnalyticsType.cs" />
-    <Compile Include="Rest\Api\Bits\BitsUser.cs" />
-    <Compile Include="Rest\Api\HelixException.cs" />
-    <Compile Include="Rest\Api\HelixInfo.cs" />
+    <Compile Include="Rest\Api\Analytics\AnalyticsGames.cs" />
+    <Compile Include="Rest\Api\Analytics\AnalyticsExtensions.cs" />
+    <Compile Include="Rest\Api\Bits\BitsLeaderboard.cs" />
+    <Compile Include="Rest\Api\Clips\Clips.cs" />
+    <Compile Include="Rest\Api\Entitlements\EntitlementsUpload.cs" />
+    <Compile Include="Rest\Api\Games\GamesTop.cs" />
+    <Compile Include="Rest\Api\Games\Games.cs" />
+    <Compile Include="Rest\Api\HelixHelpers.cs" />
     <Compile Include="Rest\Api\Streams\Streams.cs" />
     <Compile Include="Rest\Api\Streams\StreamsMarkers.cs" />
     <Compile Include="Rest\Api\Streams\StreamsMetadata.cs" />
     <Compile Include="Rest\Api\Streams\StreamsTags.cs" />
-    <Compile Include="Rest\Api\Subscriptions\BroadcasterSubscribersParameters.cs" />
-    <Compile Include="Rest\Api\Subscriptions\SubscriptionRelationshipParameters.cs" />
-    <Compile Include="Rest\Api\Subscriptions\Subscription.cs" />
-    <Compile Include="Rest\Api\Tags\StreamTagsParameters.cs" />
-    <Compile Include="Rest\Api\Tags\StreamTag.cs" />
+    <Compile Include="Rest\Api\Subscriptions\Subscriptions.cs" />
+    <Compile Include="Rest\Api\Tags\Tags.cs" />
     <Compile Include="Rest\Api\TwitchApi.Async.cs" />
     <Compile Include="Rest\Api\TwitchApi.OAuth.Async.cs" />
     <Compile Include="Clients\Irc\IrcClient.Handlers.cs" />
@@ -91,28 +83,18 @@
     <Compile Include="Debugger\Debug.Validation.cs" />
     <Compile Include="Debugger\ValidateObjectAttribute.cs" />
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
-    <Compile Include="Rest\Api\Entitlements\EntitlementType.cs" />
-    <Compile Include="Rest\Api\Users\DuplicateExtensionException.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensions.cs" />
-    <Compile Include="Rest\Api\Users\UpdateExtensionsParameters.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensionsData.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtension.cs" />
-    <Compile Include="Rest\Api\Users\ExtensionType.cs" />
-    <Compile Include="Rest\Api\Users\Extension.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensionsParameters.cs" />
-    <Compile Include="Rest\Api\Users\DescriptionParameters.cs" />
+    <Compile Include="Rest\Api\Users\UsersExtensionsList.cs" />
+    <Compile Include="Rest\Api\Users\UsersExtensions.cs" />
     <Compile Include="Rest\Attributes.cs" />
     <Compile Include="Rest\Converters.cs" />
-    <Compile Include="Rest\Enums.cs" />
+    <Compile Include="Rest\Scopes.cs" />
     <Compile Include="Rest\OAuth\Token\AppAccessTokenParameters.cs" />
     <Compile Include="Rest\OAuth\Token\AppAccessTokenData.cs" />
     <Compile Include="Rest\OAuth\GrantType.cs" />
     <Compile Include="Rest\OAuth\OAuth2Info.cs" />
-    <Compile Include="Rest\Parameters.cs" />
     <Compile Include="Rest\RequestSettings.cs" />
     <Compile Include="Rest\RestClient.cs" />
     <Compile Include="Rest\RestRequest.cs" />
-    <Compile Include="Rest\IRestResponse.cs" />
     <Compile Include="Rest\RestResponse.cs" />
     <Compile Include="Rest\Exceptions.cs" />
     <Compile Include="Rest\OAuth\Token\RefreshTokenParameters.cs" />
@@ -129,10 +111,6 @@
     <Compile Include="Clients\Irc\Twitch\RoomStateType.cs" />
     <Compile Include="Clients\Irc\Twitch\BadgeType.cs" />
     <Compile Include="BroadcasterLanguage.cs" />
-    <Compile Include="Rest\Api\Users\BroadcasterType.cs" />
-    <Compile Include="Rest\Api\Videos\VideoType.cs" />
-    <Compile Include="Rest\Api\Videos\VideoSort.cs" />
-    <Compile Include="Rest\Api\Videos\VideoPeriod.cs" />
     <Compile Include="Clients\Irc\ChannelOperatorEventArgs.cs" />
     <Compile Include="Clients\Irc\DataEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\ChatRoomBadUnmodModEventArgs.cs" />
@@ -197,40 +175,13 @@
     <Compile Include="Extensions\ValidationExtensions.cs" />
     <Compile Include="Helpers\Json\JsonDeserializer.cs" />
     <Compile Include="Helpers\Json\VideoDurationConverter.cs" />
-    <Compile Include="Rest\Api\IPagingParameters.cs" />
-    <Compile Include="Rest\Api\IDataPage.cs" />
-    <Compile Include="Rest\Api\IData.cs" />
     <Compile Include="Clients\Irc\ITags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedRoomStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedUserStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedPrivmsgTags.cs" />
-    <Compile Include="Rest\Api\Clips\ClipCreationParameters.cs" />
-    <Compile Include="Rest\Api\Clips\CreatedClip.cs" />
-    <Compile Include="Rest\Api\Clips\Clip.cs" />
-    <Compile Include="Rest\Api\Clips\ClipsParameters.cs" />
-    <Compile Include="Rest\Api\Entitlements\EntitlementUploadUrl.cs" />
-    <Compile Include="Rest\Api\DataPage.cs" />
-    <Compile Include="Rest\Api\Data.cs" />
-    <Compile Include="Rest\Api\Games\TopGamesParameters.cs" />
-    <Compile Include="Rest\StatusCodeSetting.cs" />
-    <Compile Include="Rest\Api\Games\Game.cs" />
-    <Compile Include="Rest\Api\Users\FollowsDataPage.cs" />
-    <Compile Include="Rest\Api\Users\FollowsData.cs" />
-    <Compile Include="Rest\Api\Videos\Video.cs" />
-    <Compile Include="Rest\Api\Entitlements\EntitlementsUploadParameters.cs" />
-    <Compile Include="Rest\Api\Games\GamesParameters.cs" />
-    <Compile Include="Rest\Api\PagingParameters.cs" />
-    <Compile Include="Rest\Api\Users\FollowsParameters.cs" />
-    <Compile Include="Rest\Api\IHelixResponse.cs" />
-    <Compile Include="Rest\Api\Pagination.cs" />
-    <Compile Include="Rest\Api\HelixError.cs" />
-    <Compile Include="Rest\Api\HelixResponse.cs" />
-    <Compile Include="Rest\Api\Users\Follow.cs" />
-    <Compile Include="Rest\Api\Users\User.cs" />
-    <Compile Include="Rest\RateLimit.cs" />
-    <Compile Include="Rest\Api\HelixRequestSettings.cs" />
-    <Compile Include="Rest\Api\Users\UsersParameters.cs" />
-    <Compile Include="Rest\Api\Videos\VideosParameters.cs" />
+    <Compile Include="Rest\Api\Users\UsersFollows.cs" />
+    <Compile Include="Rest\Api\Users\Users.cs" />
+    <Compile Include="Rest\Api\Videos\Videos.cs" />
     <Compile Include="Clients\Irc\IrcMessage.cs" />
     <Compile Include="Clients\Irc\IrcUser.cs" />
     <Compile Include="Debugger\ValidateTagAttribute.cs" />
