Testing and merging
All endpoint data structures have been merged in to one file for each parent endpoint. The endpoints /moderation/moderator/events and /moderation/banned/events are now implemented.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -58,21 +58,14 @@
     <Compile Include="Helpers\Json\ISerializer.cs" />
     <Compile Include="Helpers\Json\IDeserializer.cs" />
     <Compile Include="Helpers\Json\JsonSerializer.cs" />
-    <Compile Include="Rest\Helix\AnalyticsGames.cs" />
-    <Compile Include="Rest\Helix\AnalyticsExtensions.cs" />
-    <Compile Include="Rest\Helix\BitsLeaderboard.cs" />
+    <Compile Include="Rest\Helix\Analytics.cs" />
+    <Compile Include="Rest\Helix\Bits.cs" />
     <Compile Include="Rest\Helix\Clips.cs" />
-    <Compile Include="Rest\Helix\EntitlementsCodes.cs" />
-    <Compile Include="Rest\Helix\EntitlementsUpload.cs" />
-    <Compile Include="Rest\Helix\GamesTop.cs" />
+    <Compile Include="Rest\Helix\Entitlements.cs" />
     <Compile Include="Rest\Helix\Games.cs" />
     <Compile Include="Rest\Helix\HelixHelpers.cs" />
     <Compile Include="Rest\Helix\Streams.cs" />
-    <Compile Include="Rest\Helix\StreamsMarkers.cs" />
-    <Compile Include="Rest\Helix\StreamsMetadata.cs" />
-    <Compile Include="Rest\Helix\StreamsTags.cs" />
-    <Compile Include="Rest\Helix\ModerationModeratorsEvents.cs" />
-    <Compile Include="Rest\Helix\SubscriptionsEvents.cs" />
+    <Compile Include="Rest\Helix\Moderation.cs" />
     <Compile Include="Rest\Helix\Subscriptions.cs" />
     <Compile Include="Rest\Helix\Tags.cs" />
     <Compile Include="Rest\Helix\HelixApi.cs" />
@@ -86,8 +79,6 @@
     <Compile Include="Debugger\Debug.Validation.cs" />
     <Compile Include="Debugger\ValidateObjectAttribute.cs" />
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
-    <Compile Include="Rest\Helix\UsersExtensionsList.cs" />
-    <Compile Include="Rest\Helix\UsersExtensions.cs" />
     <Compile Include="Rest\Attributes.cs" />
     <Compile Include="Rest\Converters.cs" />
     <Compile Include="Rest\Scopes.cs" />
@@ -182,7 +173,6 @@
     <Compile Include="Clients\Irc\Twitch\ISharedRoomStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedUserStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedPrivmsgTags.cs" />
-    <Compile Include="Rest\Helix\UsersFollows.cs" />
     <Compile Include="Rest\Helix\Users.cs" />
     <Compile Include="Rest\Helix\Videos.cs" />
     <Compile Include="Clients\Irc\IrcMessage.cs" />
