--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Clients\Irc\Twitch\NoticeEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\HostTargetEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\GiftedSubscriberEventArgs.cs" />
-    <Compile Include="Clients\Irc\Twitch\ChatRoomPrivmsgEventArgs.cs" />
+    <Compile Include="Clients\Irc\Twitch\EventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\ChatRoomUserStateEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\ChatRoomRoomStateEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\AlreadyBannedEventArgs.cs" />
@@ -150,7 +150,6 @@
     <Compile Include="Clients\Irc\Twitch\RoomStateEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\GlobalUserStateEventArgs.cs" />
     <Compile Include="Clients\Irc\Twitch\ClearChatEventArgs.cs" />
-    <Compile Include="Clients\Irc\Twitch\StreamChatPrivmsgEventArgs.cs" />
     <Compile Include="Clients\Irc\UserModeEventArgs.cs" />
     <Compile Include="Clients\Irc\EndOfNamesEventArgs.cs" />
     <Compile Include="Clients\Irc\ChannelModeEventArgs.cs" />
@@ -174,14 +173,12 @@
     <Compile Include="Clients\Irc\ITags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedRoomStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ISharedUserStateTags.cs" />
-    <Compile Include="Clients\Irc\Twitch\ISharedPrivmsgTags.cs" />
     <Compile Include="Rest\Helix\Users.cs" />
     <Compile Include="Rest\Helix\Videos.cs" />
     <Compile Include="Clients\Irc\IrcMessage.cs" />
     <Compile Include="Clients\Irc\IrcUser.cs" />
     <Compile Include="Debugger\ValidateTagAttribute.cs" />
     <Compile Include="Clients\Irc\Twitch\GiftedSubscriberTags.cs" />
-    <Compile Include="Clients\Irc\Twitch\ChatRoomPrivmsgTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ChatRoomUserStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\ChatRoomRoomStateTags.cs" />
     <Compile Include="Clients\Irc\Twitch\WhisperTags.cs" />
@@ -196,7 +193,6 @@
     <Compile Include="Clients\Irc\Twitch\Emote.cs" />
     <Compile Include="Clients\Irc\Twitch\Badge.cs" />
     <Compile Include="Clients\Irc\Twitch\ClearChatTags.cs" />
-    <Compile Include="Clients\Irc\Twitch\StreamChatPrivmsgTags.cs" />
     <Compile Include="Rest\OAuth\Validate\OAuthTokenInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserType.cs" />
